fix: reduce landing page heading size for mobile
The wording of the landing page heading is too large for mobile devices.

--- a/src/components/layouts/hero/hero.module.css
+++ b/src/components/layouts/hero/hero.module.css
@@ -2,3 +2,9 @@
   padding: var(--space-medium) 0;
   background: var(--colors-base-background);
 }
+
+@media (--xs) {
+  .title {
+    font-size: 3rem
+  }
+}
